fix: fix view on mobile devices and add attribution link to newsapi.org

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,4 +35,26 @@ $link: hsl(171, 100%, 41%);
     font-size: 14px;
     font-style: italic;
   }
+
+  @media screen and (max-width: 425px) {
+    flex-direction: column;
+    align-items: center;
+
+    .image.is-128x128 {
+      height: auto;
+      width: 100%;
+    }
+
+    .content {
+      padding: 16px 0;
+    }
+  }
+}
+
+.footer {
+  h4 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
